# ridb-wasm

./: .gitignore  CHANGELOG.md  Cargo.toml  README.MD  build.sh  release.config.js  test.sh  webdriver.json
.github/workflows/: pr.yml  release.yml
docs/: README.md
docs/classes/: Collection.md  Database.md  Property.md  RIDB.md  Schema.md
docs/enumerations/: OpType.md
docs/namespaces/RIDBTypes/: README.md
docs/namespaces/RIDBTypes/classes/: BaseStorage.md  Collection.md  Database.md  InMemory.md  Property.md  Schema.md  StorageInternal.md  WasmBindgenTestContext.md
docs/namespaces/RIDBTypes/enumerations/: OpType.md
docs/namespaces/RIDBTypes/functions/: initSync.md  main_js.md  wbg_init.md  wbgtest_console_debug.md  wbgtest_console_error.md  wbgtest_console_info.md  wbgtest_console_log.md  wbgtest_console_warn.md
docs/namespaces/RIDBTypes/type-aliases/: CreateStorage.md  Doc.md  ExtractType.md  Operation.md  RIDBModule.md  SchemaType.md  SchemaTypeRecord.md
docs/type-aliases/: CreateStorage.md  Doc.md  ExtractType.md  Operation.md  RIDBModule.md  SchemaType.md  SchemaTypeRecord.md
docs/variables/: SchemaFieldType.md
pkg/: CHANGELOG.md  package-lock.json  package.json
scripts/: update-cargo-version.js
src/: error.rs  lib.rs  utils.rs
src/collection/: mod.rs
src/database/: mod.rs
src/operation/: mod.rs
src/plugin/: mod.rs
src/plugin/defaults/: mod.rs
src/plugin/encryption/: mod.rs
src/plugin/integrity/: mod.rs
src/plugin/migration/: mod.rs
src/query/: mod.rs
src/schema/: mod.rs  property.rs  property_type.rs
src/storage/: base.rs  mod.rs
src/storage/indexdb/: mod.rs
src/storage/inmemory/: mod.rs
src/storage/internals/: base_storage.rs  core.rs  mod.rs
src/storages/: base.rs  mod.rs
src/storages/inmemory/: mod.rs
workflows/: pr.yml  release.yml
